<resources>
    <string name="app_name">WhereAt</string>
    <string name="tile">tile</string>
    <string name="line">line</string>
    <string name="login_activity_title">Login</string>
    <string name="feed_activity_title">Feed</string>
    <string name="post_activity_title">New Post</string>
    <string name="settings_activity_title">Settings</string>
    <string name="login_activity_biola_logo">Biola Flower Logo</string>
    <string name="NetID">NetID</string>
    <string name="Password">Password</string>
    <string name="Log_In">Log In</string>
    <string name="feed_activity_going_button">Going</string>
    <string name="feed_activity_maybe_button">Maybe</string>
    <string name="entry1_author">Biola Bob</string>
    <string name="entry1_location">The Caf</string>
    <string name="entry1_time">12:30-1:00</string>
    <string name="entry1_description">I\'ll be eating in the bubble, probably just gonna make a sandwich. Lmk if you want me to grab you something if you\'re in a hurry</string>
    <string name="entry1_status">2 going, 1 maybe</string>

    <string name="entry2_author">Biola Betty</string>
    <string name="entry2_location">The Library</string>
    <string name="entry2_time">2:30-4:00</string>
    <string name="entry2_description">Working on the chem lab due tonight. Please only join if your\'re going to study, sorry I really need to focus on this!!</string>
    <string name="entry2_status">0 going, 1 maybe</string>

    <string name="entry3_author">Thomas Burgess</string>
    <string name="entry3_location">The Lim</string>
    <string name="entry3_time">5:30-6:00</string>
    <string name="entry3_description">01000011 01110010 01100101 01100100 01101001 01110100 01110011 00111010 00100000 01010100 01101000 01101111 01101101 01100001 01110011 00100000 01000010 01110101 01110010 01100111 01100101 01110011 01110011 00101100 00100000 01001101 01100001 01110100 01100101 01101111 00100000 01001100 01100001 01101110 01100111 01110011 01110100 01101111 01101110 00100000 01010011 01101101 01101001 01110100 01101000 00101100 00100000 01010100 01001010 00100000 01011001 01110101 01110010 01100101 01101011</string>
    <string name="entry3_status">2 going, 0 maybe</string>

    <string name="entry4_author">Thomas Burgess</string>
    <string name="entry4_location">The Lim</string>
    <string name="entry4_time">5:30-6:00</string>
    <string name="entry4_description">01000011 01110010 01100101 01100100 01101001 01110100 01110011 00111010 00100000 01010100 01101000 01101111 01101101 01100001 01110011 00100000 01000010 01110101 01110010 01100111 01100101 01110011 01110011 00101100 00100000 01001101 01100001 01110100 01100101 01101111 00100000 01001100 01100001 01101110 01100111 01110011 01110100 01101111 01101110 00100000 01010011 01101101 01101001 01110100 01101000 00101100 00100000 01010100 01001010 00100000 01011001 01110101 01110010 01100101 01101011</string>
    <string name="entry4_status">0 going, 0 maybe</string>

    <string name="post_activity_location">Location</string>
    <string name="post_activity_time">Start Time</string>
    <string name="post_activity_end_time">End Time</string>
    <string name="post_activity_description">Description...</string>
    <string name="post_activity_button">Post</string>

    <string name="settings_activity_display_name">Display Name</string>
    <string name="settings_activity_notifications_switch">Push notifications</string>
    <string name="settings_activity_notifications_time">10</string>
    <string name="settings_activity_notifications_time_description">minutes before events you have responded to</string>
    <string name="settings_activity_notifications_logout_button">Log Out</string>
    <string name="settings_activity_save_button">Save</string>
    <string name="settings_activity_notifications_time_label">Time to be notified before events occur</string>
    <string name="new_post_button">New Post Button</string>

</resources>