<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
android:background="#E31837"
android:elevation="0dp"
android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/post_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="4dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_activity_title"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/main_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/main_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/loginTile"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="4dp"
            card_view:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/locationText"
                    android:layout_width="130dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="28dp"
                    android:autofillHints="location"
                    android:ems="10"
                    android:hint="@string/post_activity_location"
                    android:inputType="text"
                    app:layout_constraintEnd_toStartOf="@+id/timeText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/timeText"
                    android:layout_width="95dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints="time"
                    android:ems="10"
                    android:hint="@string/post_activity_time"
                    android:inputType="time"
                    app:layout_constraintEnd_toStartOf="@+id/endTimeText"
                    app:layout_constraintStart_toEndOf="@+id/locationText"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/endTimeText"
                    android:layout_width="95dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="@string/post_activity_end_time"
                    android:ems="10"
                    android:hint="@string/post_activity_end_time"
                    android:inputType="time"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.51"
                    card_view:layout_constraintStart_toEndOf="@+id/locationText"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/descriptionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="description"
                    android:ems="10"
                    android:hint="@string/post_activity_description"
                    android:inputType="text"
                    android:singleLine="false"
                    app:layout_constraintBottom_toTopOf="@+id/loginButton2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/locationText" />

                <Button
                    android:id="@+id/loginButton2"
                    android:layout_width="129dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/custom_rounded_corners"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="postActivity"
                    android:text="@string/post_activity_button"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>